syntax = "proto3";
package fixbug;
option cc_generic_services = true;
message LoginRequest
{
    string name=1;
    string pwd=2;
}
message LoginResponse
{
    int32 errcode=1;
    string errmsg=2;
    bool success =3;    
}

service UserService
{
    rpc Login(LoginRequest) returns(LoginResponse);
}